--- a/style.css
+++ b/style.css
@@ -4,8 +4,102 @@
     font-family: Century Gothic;
 }
 header{
-    background-image: url(../wind-turbine-15.jpg);
-    height: 100vh;
+	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(giphy.gif);
+	height: 100vh;
     background-size: cover;
     background-position: center;
 }
+ul{
+	float:right;
+	list-style-type:none;
+	margin-top:30px;
+	margin-right:13px;
+}
+ul li{
+	display:inline-block;
+}
+ul li a{
+	text-decoration:none;
+	color:#ffffff;
+	padding:20px 80px;
+	border:1px solid transparent;
+	transition:0.5s ease;
+}
+ul li a:hover{
+	background-color:#ffffff;
+	color:#000000;
+}
+ul li.active a{
+	background-color:#ffffff;
+	color:#000000;
+}
+
+.logo img{
+	float:left;
+	width:150px;
+	height: auto;
+}
+.main{
+	max-width; 1200px;
+	margin:auto;
+}
+.title{
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+}
+.title h1{
+	color:#ffffff;
+	font-size:70px;
+	
+}
+.button{
+	position:absolute;
+	top:62%;
+	left:50%;
+	transform:translate(-50%,-50%);	
+}
+
+.btn{
+	border:1px solid #ffffff;
+	padding:10px 30px;
+	color:#ffffff;
+	text-decoration:none;
+	transition:0.5s ease;
+}
+
+.btn:hover{
+	background-color:#ffffff;
+	color:#000000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
